<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <EditText
        android:id="@+id/et_login_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:theme="@style/AppEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/underline_et_email"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorEditBg"
        app:layout_constraintEnd_toEndOf="@id/et_login_email"
        app:layout_constraintStart_toStartOf="@id/et_login_email"
        app:layout_constraintTop_toBottomOf="@id/et_login_email" />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="19dp"
        android:background="@null"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:maxLength="32"
        android:theme="@style/AppEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_login_email" />

    <View
        android:id="@+id/underline_et_password"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorEditBg"
        app:layout_constraintEnd_toEndOf="@id/et_login_password"
        app:layout_constraintStart_toStartOf="@id/et_login_password"
        app:layout_constraintTop_toBottomOf="@id/et_login_password" />

    <ImageView
        android:id="@+id/iv_switch_password"
        android:layout_width="26dp"
        android:layout_height="23dp"
        app:layout_constraintEnd_toEndOf="@id/et_login_password"
        app:layout_constraintTop_toTopOf="@id/et_login_password"
        app:layout_constraintBottom_toBottomOf="@id/et_login_password"
        android:src="@drawable/icon_chakan"
        android:layout_marginEnd="10dp"
        android:padding="7dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_login_forget_psd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/forget_password"
        android:textColor="@color/colorTextBlue"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_login_password"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/tv_login_btn"
        style="@style/BlueButtonStyle"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginTop="30dp"
        android:enabled="false"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_forget_psd" />

    <TextView
        android:id="@+id/tv_third_login_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/third_login_tip"
        android:textColor="@color/colorTextGray"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_btn"
        tools:ignore="SmallSp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_third_login_tip">

        <ImageView
            android:id="@+id/iv_third_login_wechat"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/icon_wechat"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/iv_third_login_facebook"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/icon_facebook"
            tools:ignore="ContentDescription" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>