<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.MainActivity"
    tools:ignore="SmallSp">

    <android.support.constraint.Guideline
        android:id="@+id/gl_main_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.923" />

    <LinearLayout
        android:id="@+id/ll_main_bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_main_b">

        <LinearLayout
            android:id="@+id/ll_main_item_discovery"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/selector_main_discovery_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/main_bottom_item_discovery"
                android:textColor="@drawable/selector_text_color_main_item"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_main_item_collection"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/selector_main_collection_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/main_bottom_item_collection"
                android:textColor="@drawable/selector_text_color_main_item"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_main_item_workbench"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/selector_main_workbench_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/main_bottom_item_workbench"
                android:textColor="@drawable/selector_text_color_main_item"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_main_item_messages"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/selector_main_messages_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/main_bottom_item_messages"
                android:textColor="@drawable/selector_text_color_main_item"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_main_item_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/selector_main_me_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/main_bottom_item_me"
                android:textColor="@drawable/selector_text_color_main_item"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#E6E6E6"
        app:layout_constraintTop_toTopOf="@id/ll_main_bottom" />

    <com.heyrent.app.renter.widget.SlideViewPager
        android:id="@+id/vp_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/ll_main_bottom"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>