<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:ignore="ContentDescription">

    <!--TitleBar-->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_title_bar"
        android:layout_width="match_parent"
        android:layout_height="42dp">

        <TextView
            android:id="@+id/tv_title_bar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/me_title"
            android:textColor="@color/colorText333"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_title_bar_right"
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:layout_marginEnd="22dp"
            android:src="@drawable/icon_setting"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />
    </android.support.constraint.ConstraintLayout>

    <!--user info-->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_login_user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:paddingBottom="4dp"
        app:layout_constraintTop_toBottomOf="@id/cl_title_bar">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_user_bg"
            android:layout_width="316dp"
            android:layout_height="129dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="63dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:text="Mike"
                android:textColor="@color/colorText333"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_me_edit_personal_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="14dp"
                android:background="@drawable/shape_me_personal_info_bg"
                android:drawableEnd="@drawable/icon_me_editor"
                android:drawablePadding="5dp"
                android:paddingBottom="8dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:paddingTop="8dp"
                android:text="@string/me_personal_info"
                android:textColor="@color/colorWhite"
                android:textSize="12sp" />
        </android.support.v7.widget.CardView>

        <ImageView
            android:id="@+id/iv_user_header"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:elevation="20dp"
            app:layout_constraintBottom_toTopOf="@id/cv_user_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cv_user_bg" />
    </android.support.constraint.ConstraintLayout>

    <!--Item my Profile-->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_me_my_profile"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/cl_login_user_info">

        <ImageView
            android:id="@+id/iv_me_item_my_profile"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_marginStart="22dp"
            android:src="@drawable/icon_me_my_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:text="@string/me_my_profile"
            android:textColor="@color/colorMeItemText"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_me_item_my_profile"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="7dp"
            android:layout_height="13dp"
            android:layout_marginEnd="22dp"
            android:src="@drawable/icon_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <!--Item My Credit-->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_me_my_credit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/cl_me_my_profile">

        <ImageView
            android:id="@+id/iv_me_item_my_credit"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_marginStart="22dp"
            android:src="@drawable/icon_my_my_credit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:text="@string/me_my_credit"
            android:textColor="@color/colorMeItemText"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_me_item_my_credit"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="7dp"
            android:layout_height="13dp"
            android:layout_marginEnd="22dp"
            android:src="@drawable/icon_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <!--Item Invite Friends-->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_me_invite_friends"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/cl_me_my_credit">

        <ImageView
            android:id="@+id/iv_me_item_invite_friends"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_marginStart="22dp"
            android:src="@drawable/icon_me_invite_friends"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:text="@string/me_invite_friend"
            android:textColor="@color/colorMeItemText"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_me_item_invite_friends"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="7dp"
            android:layout_height="13dp"
            android:layout_marginEnd="22dp"
            android:src="@drawable/icon_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <!--Item Help-->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_me_help"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/cl_me_invite_friends">

        <ImageView
            android:id="@+id/iv_me_item_help"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_marginStart="22dp"
            android:src="@drawable/icon_me_help"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:text="@string/me_help"
            android:textColor="@color/colorMeItemText"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_me_item_help"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="7dp"
            android:layout_height="13dp"
            android:layout_marginEnd="22dp"
            android:src="@drawable/icon_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>